--- a/index.njk
+++ b/index.njk
@@ -19,15 +19,16 @@ layout: layout.njk
 		margin: 0;
 	}
 	</style>
-	<h3>Quick Guide to Speedlify</h3>
+	<h3>Commentaires sur la version déployée</h3>
 	<ol>
-		<li>Add your own URLs to test in a <code>_data/sites/*.js</code> configuration file. Look at the existing samples (Make sure you use <code>skip: false</code>). You can delete the existing ones after you’ve made your own</li>
-		<li>Remove this message from <code>index.njk</code></li>
+		<li>Aucune modification n'a été réalisée sur le code de Zack Leatherman, disponible sur son repo GitHub</li>
+		<li>Les URL des sites référencés sont totalement publiques</li>
+		<li>Les mesures effectuées peuvent évoluer dans le temps, en fonction des outils de mesure fournis par Google ainsi que de la qualité du code délivré</li>
 	</ol>
 </div>
 {% endstarterMessage %}
 <table class="leaderboard leaderboard-list">
-	<caption>Choose a category</caption>
+	<caption>Choisir une catégorie</caption>
 	<thead data-sr-only>
 		<tr>
 			<th>Category</th>
