--- a/index.njk
+++ b/index.njk
@@ -23,7 +23,7 @@ layout: layout.njk
 	<ol>
 		<li>Aucune modification n'a été réalisée sur le code de Zack Leatherman, disponible sur son repo GitHub</li>
 		<li>Les URL des sites référencés sont totalement publiques</li>
-		<li>Les mesures effectuées peuvent évoluer dans le temps, en fonction des outils de mesure fournis par Google ainsi que de la qualité du code délivré</li>
+		<li>Les mesures effectuées peuvent évoluer dans le temps, en fonction des outils de mesure fournis par Google ainsi que de la qualité du code délivré par les entreprises</li>
 	</ol>
 </div>
 {% endstarterMessage %}
