--- a/index.njk
+++ b/index.njk
@@ -28,7 +28,7 @@ layout: layout.njk
 </div>
 {% endstarterMessage %}
 <table class="leaderboard leaderboard-list">
-	<caption>Choisir une catégorie</caption>
+	<caption>Détails des mesures</caption>
 	<thead data-sr-only>
 		<tr>
 			<th>Category</th>
