--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -12,7 +12,7 @@
 		</script>
 		{% if env.isProd %}
     		<script 
-				async src="https://www.googletagmanager.com/gtag/js?id=G-MN366W1XX4">
+				async src="https://www.googletagmanager.com/gtag/js?id=G-SXCVYK4YB5">
     		</script>
     		<script>
       			window.dataLayer = window.dataLayer || [];
@@ -20,7 +20,7 @@
         			dataLayer.push(arguments);
       			}
       			gtag('js', new Date());
-     			gtag('config', 'G-MN366W1XX4');
+     			gtag('config', 'G-SXCVYK4YB5');
     		</script>
   		{% endif %}
 	</head>
