--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -10,37 +10,28 @@
 		<script>
 		document.documentElement.classList.add("js");
 		</script>
-		{% if env.isProd %}
-    		<script 
-				async src="https://www.googletagmanager.com/gtag/js?id=G-SXCVYK4YB5">
-    		</script>
-    		<script>
-      			window.dataLayer = window.dataLayer || [];
-      			function gtag() {
-        			dataLayer.push(arguments);
-      			}
-      			gtag('js', new Date());
-     			gtag('config', 'G-SXCVYK4YB5');
-    		</script>
-  		{% endif %}
 	</head>
 	<body>
-		<h1 class="speedlify-hed"><a href="{{ '/' | url }}">speedlify</a>{% if vertical %}:{{ vertical }}{% endif %}</h1>
-		<p class="speedlify-subhed">
-			Benchmark {{ sites[vertical].description or "web pages" }} over time.
-			{%- if sites[vertical].unordered %}
-				Results for this category are unordered.
-			{%- endif %}
-			{%- if maxResults %}
-				Updates <em>at most</em> once every {{ sites[vertical].options.frequency or 60 }} minutes. Only the last {{ maxResults }} run{% if maxResults != 1 %}s{% endif %} (and the oldest run) are shown.
-			{%- endif %}
-			Created by <a href="https://www.zachleat.com/">@zachleat</a>.
-		</p>
-		<p class="speedlify-subhed">
-			<a href="https://github.com/zachleat/speedlify/#deploy-to-netlify">Deploy your own instance of Speedlify and test your web sites</a>.
-		</p>
+		<header>
+			<h1 class="speedlify-hed"><a href="{{ '/' | url }}">speedlify</a>{% if vertical %}:{{ vertical }}{% endif %}</h1>
+			<p class="speedlify-subhed">
+				Benchmark {{ sites[vertical].description or "web pages" }} over time.
+				{%- if sites[vertical].unordered %}
+					Results for this category are unordered.
+				{%- endif %}
+				{%- if maxResults %}
+					Updates <em>at most</em> once every {{ sites[vertical].options.frequency or 60 }} minutes. Only the last {{ maxResults }} run{% if maxResults != 1 %}s{% endif %} (and the oldest run) are shown.
+				{%- endif %}
+				Created by <a href="https://www.zachleat.com/">@zachleat</a>.
+			</p>
+			<p class="speedlify-subhed">
+				<a href="https://github.com/zachleat/speedlify/#deploy-to-netlify">Deploy your own instance of Speedlify and test your web sites</a>.
+			</p>
+		</header>
 
-		{{ content | safe }}
+		<main>
+			{{ content | safe }}
+		</main>
 
 		<footer>
 			MIT licensed. Read <a href="https://www.zachleat.com/web/speedlify/">the blog post</a>. Source code on <a href="https://github.com/zachleat/speedlify/">GitHub</a>. Created by <a href="https://www.zachleat.com/">@zachleat</a>.
