--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -10,6 +10,14 @@
 		<script>
 		document.documentElement.classList.add("js");
 		</script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXCVYK4YB5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-SXCVYK4YB5');
+</script>
+
 	</head>
 	<body>
 		<header>
