--- a/index.njk
+++ b/index.njk
@@ -26,6 +26,7 @@ layout: layout.njk
 		<li>Les mesures effectuées peuvent évoluer dans le temps, en fonction des outils de mesure fournis par Google ainsi que de la qualité du code délivré par les entreprises</li>
 		<li>Le site Hermes n'est pas pris en compte suite à une 'protection' mise en oeuvre contre les 'robots'</li>
 		<li>Le score maximum est de 400, sachant qu'un score inférieur à 360 se doit d'être amélioré</li>
+		<li><i>01/07/2023 : Edenred a remplacé Vivendi dans le CAC40<i></li>
 	</ol>
 </div>
 {% endstarterMessage %}
